--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
-    "@paji-sdk/browser": "^0.14.1",
-    "@paji-sdk/utils": "^0.14.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
+    "@paji-sdk/utils": "^3.0.1",
+    "@paji-sdk/web": "^3.0.1",
     "@react-three/cannon": "^5.1.0",
     "@react-three/drei": "^8.20.2",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.8.0",
-    "next": "12.1.5",
+    "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^8.1.0",
     "react": "17.0.2",
