--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-dom": "17.0.2",
     "react-jss": "^10.9.0",
     "react-redux": "^7.2.8",
-    "three": "^0.138.3"
+    "three": "^0.138.3",
+    "tone": "^14.7.77"
   },
   "devDependencies": {
     "eslint": "8.13.0",
