--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@react-three/drei": "^8.20.2",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.8.0",
+    "ga-4-react": "^0.1.281",
     "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^8.1.0",
