--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
+    "@paji-sdk/next-lib": "^3.1.0-alpha.0",
     "@paji-sdk/utils": "^3.0.1",
     "@paji-sdk/web": "^3.0.1",
     "@react-three/cannon": "^5.1.0",
