--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,6 +27,7 @@
     "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^8.1.0",
+    "next-sitemap": "^3.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.9.0",
